Issue #2012 - fix z-index + type of search button

--- a/webcompat/static/css/src/issues-list.css
+++ b/webcompat/static/css/src/issues-list.css
@@ -92,4 +92,5 @@
   margin-top: -23px;
   position: absolute;
   margin-left: -18px;
+  z-index: 200;
 }
